input: Support Input Methods for internal windows and effects

The internal Qt QPA is now connected directly to InputMethod stack when any
item has focus.

Unlike the wayland protocol nothing is double buffered because we should
process everything before the next frame.

BUG: 450014